order details status ui update

--- a/Views/Shared/_LatestNotifications.cshtml
+++ b/Views/Shared/_LatestNotifications.cshtml
@@ -30,7 +30,7 @@
 
     if (User.IsInRole("Customer"))
     {
-        roleLink = Url.Action("UserOrders", "Order", new { area = "Customer" });
+        roleLink = Url.Action("Index", "Deshboard", new { area = "User" });
     }
     else if (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))
     {
