Layout page Notification popup modification

--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
                         <div class="card" style="transition: box-shadow 0.3s ease; height: 220px; width: 200px;">
                             <img src="/assets/img/product/others.jpg" class="card-img-top mt-3" style="height: 150px; width: 100%; object-fit: cover;" alt="Others">
                             <div class="card-body">
-                                <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Others</h5>
+                                <h5 style="font-weight: bold; text-align: center; height: 100px; position: relative;">Pet</h5>
                             </div>
                         </div>
                     </a>
@@ -121,10 +121,10 @@
             </div>
         </div>
 
-       <div class="col-md-3 col-lg-3 mt-2" style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1); padding: 20px;">
+       <div class="col-md-3 col-lg-3 " style="background-color: #fafafa; border-radius: 10px; box-shadow: 0px 4px 8px rgba(134, 133, 133, 0.1); padding: 20px;">
 
 
-            <h4 class="TitleCard text-center" style="font-size:21px;  padding:2px ; font-weight:600">Find Nearby Shop</h4>
+            <h4 class="TitleCard text-center" style="font-size:20px;  padding:2px ; font-weight:500">Find Nearby Shop</h4>
    
             <div class="row mt-2 " style="margin-top:5px">
                 <div class="col-6">
@@ -194,78 +194,8 @@
         </div>
 
 
-
-
     </div>
 </div>
-
-<style>
-    .card:hover {
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        transform: translateY(-1px);
-        transition: all 0.2s ease;
-    }
-
-    .Innercard {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100px;
-        border-radius: 10px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-bottom: 15px;
-        font-size: 15px;
-        font-weight: bold;
-    }
-
-    .OtherIncard {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100px;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-bottom: 5px;
-        font-size: 12px;
-        font-weight: bold;
-    }
-
-    .TitleCard {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 40px;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        margin-bottom: 5px;
-        font-size: 15px;
-        font-weight: bold;
-    }
-
-    .Innercard-1 {
-        background-color: #71e9e7;
-    }
-
-    .Innercard-2 {
-        background-color: #dac4e2;
-    }
-
-    .Innercard-3 {
-        background-color: #ffcdd2;
-    }
-
-    .Innercard-4 {
-        background-color: #bbdefb;
-    }
-
-    .other-services .cInnercardard {
-        height: 40px;
-    }
-
-</style>
 <!-- category div End -->
 <!--deals product section area start-->
 <section class="deals_product_section mb-50">
@@ -877,6 +807,76 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
+
+
+<style>
+    .card:hover {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        transform: translateY(-1px);
+        transition: all 0.2s ease;
+    }
+
+    .Innercard {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100px;
+        border-radius: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 15px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    .OtherIncard {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100px;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 5px;
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .TitleCard {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 40px;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 5px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    .Innercard-1 {
+        background-color: #71e9e7;
+    }
+
+    .Innercard-2 {
+        background-color: #dac4e2;
+    }
+
+    .Innercard-3 {
+        background-color: #ffcdd2;
+    }
+
+    .Innercard-4 {
+        background-color: #bbdefb;
+    }
+
+    .other-services .cInnercardard {
+        height: 40px;
+    }
+
+</style>
+
 
 
 
