UI Design Modificatoin for nav

--- a/Views/Shared/_LatestNotifications.cshtml
+++ b/Views/Shared/_LatestNotifications.cshtml
@@ -55,7 +55,7 @@
                     <i class="fa-solid fa-suitcase" style="font-size: 1rem;"></i>
                 </div>
             </div>
-            <div style="flex: 0.7">
+            <div style="flex: 0.7; padding:5px; margin:5px">
                 <div class="small text-gray-400" style="font-size: 0.8rem; color: #6c757d;">@notification.DateCreated.ToString("MMMM dd, yyyy")</div>
                 <span class="font-weight-bold" style="font-size: 0.8rem;">@notification.Message</span>
             </div>
