--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="form-group mt-2">
-                            <button type="submit" style="border-radius:10px" class="btn btn-success mb-4 wide-button w-100">Log in</button>
+                            <button type="submit" style="border-radius:20px; font-size:25px; font-weight:700" class="btn btn-success mb-4 wide-button w-100">Log in</button>
                         </div>
                         <div class="form-group-inline">
                             <a class="btn btn-default" asp-page="./ForgotPassword">Forgot your password?</a>
