--- a/Views/Shared/_LatestNotifications.cshtml
+++ b/Views/Shared/_LatestNotifications.cshtml
@@ -49,15 +49,11 @@
     if (!string.IsNullOrEmpty(roleLink))
     {
         <a class="dropdown-item d-flex align-items-center" href="@roleLink"
-           style="display: flex; align-items: center; padding: 0.75rem 1.25rem; text-decoration: none;">
-            <div class="mr-3" style="flex-shrink: 0;">
-                <div class="icon-circle" style="width: 2rem; height: 2rem; display: flex; align-items: center; justify-content: center; background-color: #e9ecef; border-radius: 50%;">
-                    <i class="fa-solid fa-suitcase" style="font-size: 1rem;"></i>
-                </div>
-            </div>
-            <div style="flex: 0.7; padding:5px; margin:5px">
+           style="display: flex; align-items:start; text-decoration: none;">
+           
+            <div style="flex: 1">
                 <div class="small text-gray-400" style="font-size: 0.8rem; color: #6c757d;">@notification.DateCreated.ToString("MMMM dd, yyyy")</div>
-                <span class="font-weight-bold" style="font-size: 0.8rem;">@notification.Message</span>
+                <span class="font-weight-bold" style="font-size: 0.8rem; word-wrap: break-word;">@notification.Message</span>
             </div>
         </a>
     }
