Footer Blog linkup

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -652,7 +652,7 @@
                             <div class="Latest_Posts_wrapper">
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="~/img/blog/71fb047f-bdf5-4721-ac18-a2cf825210c6_Organic-food banner.jpg" alt=""></a>
+                                        <a href="/Customer/Blog"><img src="~/img/blog/71fb047f-bdf5-4721-ac18-a2cf825210c6_Organic-food banner.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
                                         <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="1">Blog image post</a></h3>
@@ -661,7 +661,7 @@
                                 </div>
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="~/img/blog/maxresdefault.jpg" alt=""></a>
+                                        <a href="/Customer/Blog"><img src="~/img/blog/maxresdefault.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
                                         <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="2">Blog image post</a></h3>
@@ -670,7 +670,7 @@
                                 </div>
                                 <div class="single_Latest_Posts">
                                     <div class="Latest_Posts_thumb">
-                                        <a href="blog-details.html"><img src="~/img/blog/wuan.jpg" alt=""></a>
+                                        <a href="/Customer/Blog"><img src="~/img/blog/wuan.jpg" alt=""></a>
                                     </div>
                                     <div class="Latest_Posts_content">
                                         <h3><a asp-action="Details" asp-area="Customer" asp-controller="Blog" asp-route-id="1">Blog image post</a></h3>
